<resources>
    <string name="app_name">mobile_sensor_display</string>
    <string name="start_running">Start Tracking Running Efficiency</string>
    <string name="stop_running">Stop Tracking Running Efficiency</string>
    <string name="start_exercise">Start Tracking Exercise Efficiency</string>
    <string name="stop_exercise">Stop Tracking Exercise Efficiency</string>
    <string name="start_sleep">Start Tracking Sleep Efficiency</string>
    <string name="stop_sleep">Stop Tracking Sleep Efficiency</string>
    <string name="visualize_running">Visualize Running</string>
    <string name="visualize_exercising">Visualize Exercising</string>
    <string name="visualize_sleeping">Visualize Sleeping</string>
    <string name="zero">0.00 Meters</string>
    <string name="blenotsupported">Bluetooth Low Energy not supported.</string>
    <string name="bluetoothnotsupported">Bluetooth not supported.</string>
    <string name="unit_meters">Meters</string>
    <string name="connected">Connected to Polar HR Sensor</string>
    <string name="disconnected">Lost Connection to Polar HR Sensor</string>
</resources>
