<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/response_scroll"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:scrollbars="vertical"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.lijingjiang.mobile_sensor_display.SimplePedometerActivity"
        android:weightSum="1">


        <EditText
            android:id="@+id/age_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="input your age"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/exercise_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="input your the exercise type"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/result_field"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textSize="30sp"
             />

        <TextView
            android:id="@+id/hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/start_running_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_running"
                android:onClick="startCollection_Running" />

            <Button
                android:id="@+id/stop_running_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_running"
                android:onClick="stopCollection_Running" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/start_exercise_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_exercise"
                android:onClick="startCollection_Exercising" />

            <Button
                android:id="@+id/stop_exercise_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_exercise"
                android:onClick="stopCollection_Exercising" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/start_sleep_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_sleep"
                android:onClick="startCollection_Sleeping" />

            <Button
                android:id="@+id/stop_sleep_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_sleep"
                android:onClick="stopCollection_Sleeping" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/visualize_running_efficiency_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualize_running"
                android:onClick="visualizeRunningEfficiency" />

            <Button
                android:id="@+id/visualize_exercise_efficiency_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualize_exercising"
                android:onClick="visualizeExerciseEfficiency" />


            <Button
                android:id="@+id/visualize_sleep_efficiency_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visualize_sleeping"
                android:onClick="visualizeSleepEfficiency" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
